# ThreeLetterDatabase

./: .gitignore  README.md  info.txt  installs.py  main.py  pyproject.toml  web_searcher.py
Databases/: DatabaseGenerator.py
Databases/Airports/: airport-codes-canada.txt  airport-codes-international.txt  airportGenerator.py  airports-database.db  all-codes.txt
Databases/Colleges/: CollegeFinder.py  college-abreviations.txt  colleges-database.db  completion-list.txt
Databases/Organizations/: OrganizationFinder.py  completion-list.txt  organizations-database.db  websiteDatabase.py
Databases/Stocks/: completion-list.txt  stocks-database.db  stocksProcessor.py
Wix Website/: DatabasePage.js  EntryPage.js  Home.js  info.txt  masterPage.js
