[tool.poetry]
name = "repl_python3_HonorableWingedActivemovie"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-helper = "^0.3.1"
search-engine-parser = "^0.6.2"
yfinance = "^0.1.59"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
